# Mini_RAG_System

./: .dockerignore  .gitignore  Dockerfile  README.md  app.db  checkpoints.sqlite  checkpoints.sqlite-shm  checkpoints.sqlite-wal  main.py  pyproject.toml  render.yaml  requirements.txt
frontend/: .dockerignore  Dockerfile  build_err.txt  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/c/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts
src/: exceptions.py  utils.py
src/ai_component/: llm.py
src/ai_component/core/: models.py  prompts.py
src/ai_component/graph/: edges.py  graph.py  nodes.py  state.py
src/ai_component/modules/: db_memory.py
src/ai_component/tools/: rag_tool.py  web_tool.py
src/backend/: auth.py  database.py  ingestion.py
src/backend/tasks/: controller.py  router.py  schemas.py
src/backend/users/: controller.py  router.py  schemas.py
